src/main/java/com/example/product_store/authentication/errors/RoleMismatchException.java
package com.example.product_store.authentication.errors;

public class RoleMismatchException extends RuntimeException {
  public RoleMismatchException(String message) {
    super(message);
  }
}
